--- a/static/style/style/styles.html
+++ b/static/style/style/styles.html
@@ -57,12 +57,12 @@
 
                 <hr class="component-description__bottom-splitter"/>
             </div>
-            
-                        <div class="component-description">
+
+            <div class="component-description">
                 <h2 class="component-description__header"><span class="component-description__block-name">nav-menu-small</span> component</h2>
                 <div class="component-description__bd">
                     <div class="nav-menu-small">
-                        
+
                         <div class="nav-menu-small__toggle-area">
                             <div class="nav-menu-small__toggle-area-left-container">
                                 <i class="nav-menu-small__toggle-area-left-container-icon"></i>
@@ -70,7 +70,7 @@
                             <div class="nav-menu-small__toggle-area-center-container">
                                 <i class="nav-menu-small__toggle-area-center-container-icon" ng-click="popupVisible = !popupVisible"></i>
                             </div>
-                            <div ng-click="smallMenuVisible=!smallMenuVisible" class="nav-menu-small__toggle-area-right-container">
+                            <div ng-click="smallMenuVisible = !smallMenuVisible" class="nav-menu-small__toggle-area-right-container">
                                 <i class="nav-menu-small__toggle-area-right-container-icon"></i>
                             </div>
                             <div class="nav-menu-small__toggle-area-clear"></div>
@@ -86,6 +86,32 @@
                         </ul>
                     </div>
 
+
+                    <br/>
+                    <dl class="component-description__elements">
+                        <dt>Elements:</dt>
+                        <dd class="component-description__element-name">language-menu__item</dd>
+                    </dl>
+                </div>
+
+                <hr class="component-description__bottom-splitter"/>
+            </div>
+            <div class="component-description">
+                <h2 class="component-description__header"><span class="component-description__block-name">nav-menu-large</span> component</h2>
+                <div class="component-description__bd">
+                    <div class="nav-menu-large">
+                        <div class="nav-menu-large__fixed-container">
+                            <ul class="nav-menu-large__list">
+                                <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_gallery"></i><span class="nav-menu-large__item-text nav-menu-large__item-text_selected">Gallery</span></li>
+                                <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_how-it-works"></i><span class="nav-menu-large__item-text">How it works</span></li>
+                                <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_workspace"></i><span class="nav-menu-large__item-text">Workspace</span></li>
+                                <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_globe"></i><span class="nav-menu-large__item-text">Language</span></li>
+                                <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_settings"></i><span class="nav-menu-large__item-text">Settings</span></li>
+                                <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_signout"></i><span class="nav-menu-large__item-text">Log out</span></li>
+                                <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_signin"></i><span class="nav-menu-large__item-text">Log in</span></li>
+                            </ul>
+                        </div>
+                    </div>
 
                     <br/>
                     <dl class="component-description__elements">
