--- a/static/style/style/styles.html
+++ b/static/style/style/styles.html
@@ -45,6 +45,7 @@
                             <li class="language-menu__item"><span class="language-menu__item-text">Deutsch - Deutsch</span></li>
                             <li class="language-menu__item"><span class="language-menu__item-text">Turkish - Türkçe</span></li>
                         </ul>
+                        <div class="language-menu__list-terminator"></div>
                     </div>
 
 
@@ -75,15 +76,20 @@
                             </div>
                             <div class="nav-menu-small__toggle-area-clear"></div>
                         </div>
-                        <ul class="nav-menu-small__list" ng-class="{'nav-menu-small__list_visible': smallMenuVisible}">
-                            <li class="nav-menu-small__item"><i class="nav-menu-small__item-icon nav-menu-small__item-icon_gallery"></i><span class="nav-menu-small__item-text nav-menu-small__item-text_selected">Gallery</span></li>
-                            <li class="nav-menu-small__item"><i class="nav-menu-small__item-icon nav-menu-small__item-icon_how-it-works"></i><span class="nav-menu-small__item-text">How it works</span></li>
-                            <li class="nav-menu-small__item"><i class="nav-menu-small__item-icon nav-menu-small__item-icon_workspace"></i><span class="nav-menu-small__item-text">Workspace</span></li>
-                            <li class="nav-menu-small__item"><i class="nav-menu-small__item-icon nav-menu-small__item-icon_globe"></i><span class="nav-menu-small__item-text">Language</span></li>
-                            <li class="nav-menu-small__item"><i class="nav-menu-small__item-icon nav-menu-small__item-icon_settings"></i><span class="nav-menu-small__item-text">Settings</span></li>
-                            <li class="nav-menu-small__item"><i class="nav-menu-small__item-icon nav-menu-small__item-icon_signout"></i><span class="nav-menu-small__item-text">Log out</span></li>
-                            <li class="nav-menu-small__item"><i class="nav-menu-small__item-icon nav-menu-small__item-icon_signin"></i><span class="nav-menu-small__item-text">Log in</span></li>
-                        </ul>
+                        <div class="nav-menu-small__list-wrapper-wrapper">
+                            <div class="nav-menu-small__list-wrapper" ng-class="{'nav-menu-small__list-wrapper_visible': smallMenuVisible}">
+                                <ul class="nav-menu-small__list" ng-class="{'nav-menu-small__list_visible': smallMenuVisible}">
+                                    <li class="nav-menu-small__item"><i class="nav-menu-small__item-icon nav-menu-small__item-icon_gallery"></i><span class="nav-menu-small__item-text nav-menu-small__item-text_selected">Gallery</span></li>
+                                    <li class="nav-menu-small__item"><i class="nav-menu-small__item-icon nav-menu-small__item-icon_how-it-works"></i><span class="nav-menu-small__item-text">How it works</span></li>
+                                    <li class="nav-menu-small__item"><i class="nav-menu-small__item-icon nav-menu-small__item-icon_workspace"></i><span class="nav-menu-small__item-text">Workspace</span></li>
+                                    <li class="nav-menu-small__item"><i class="nav-menu-small__item-icon nav-menu-small__item-icon_globe"></i><span class="nav-menu-small__item-text">Language</span></li>
+                                    <li class="nav-menu-small__item"><i class="nav-menu-small__item-icon nav-menu-small__item-icon_settings"></i><span class="nav-menu-small__item-text">Settings</span></li>
+                                    <li class="nav-menu-small__item"><i class="nav-menu-small__item-icon nav-menu-small__item-icon_signout"></i><span class="nav-menu-small__item-text">Log out</span></li>
+                                    <li class="nav-menu-small__item"><i class="nav-menu-small__item-icon nav-menu-small__item-icon_signin"></i><span class="nav-menu-small__item-text">Log in</span></li>
+                                </ul>
+                                <div class="nav-menu-small__list-terminator"></div>
+                            </div>
+                        </div>
                     </div>
 
 
