--- a/static/style/style/styles.html
+++ b/static/style/style/styles.html
@@ -21,12 +21,7 @@
                     <span>
                         Inspired by <a href="https://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/" target="_blank">Solved by Flexbox</a>
                     </span>
-                    <dl class="component-description__elements">
-                        <dt>Elements:</dt>
-                        <dd class="component-description__element-name">site__content</dd>
-                    </dl>
                 </div>
-
                 <hr class="component-description__bottom-splitter"/>
             </div>
             <div class="component-description">
@@ -47,13 +42,6 @@
                         </ul>
                         <div class="language-menu__list-terminator"></div>
                     </div>
-
-
-                    <br/>
-                    <dl class="component-description__elements">
-                        <dt>Elements:</dt>
-                        <dd class="component-description__element-name">language-menu__item</dd>
-                    </dl>
                 </div>
 
                 <hr class="component-description__bottom-splitter"/>
@@ -91,41 +79,14 @@
                             </div>
                         </div>
                     </div>
-
-
-                    <br/>
-                    <dl class="component-description__elements">
-                        <dt>Elements:</dt>
-                        <dd class="component-description__element-name">language-menu__item</dd>
-                    </dl>
                 </div>
-
                 <hr class="component-description__bottom-splitter"/>
             </div>
             <div class="component-description">
                 <h2 class="component-description__header"><span class="component-description__block-name">nav-menu-large</span> component</h2>
                 <div class="component-description__bd">
-                    <div class="nav-menu-large">
-                        <div class="nav-menu-large__fixed-container">
-                            <ul class="nav-menu-large__list">
-                                <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_gallery"></i><span class="nav-menu-large__item-text nav-menu-large__item-text_selected">Gallery</span></li>
-                                <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_how-it-works"></i><span class="nav-menu-large__item-text">How it works</span></li>
-                                <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_workspace"></i><span class="nav-menu-large__item-text">Workspace</span></li>
-                                <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_globe"></i><span class="nav-menu-large__item-text">Language</span></li>
-                                <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_settings"></i><span class="nav-menu-large__item-text">Settings</span></li>
-                                <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_signout"></i><span class="nav-menu-large__item-text">Log out</span></li>
-                                <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_signin"></i><span class="nav-menu-large__item-text">Log in</span></li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <br/>
-                    <dl class="component-description__elements">
-                        <dt>Elements:</dt>
-                        <dd class="component-description__element-name">language-menu__item</dd>
-                    </dl>
+                    <a class="component-description__link" href="/style/components/site.html" target="_blank">Example</a>
                 </div>
-
                 <hr class="component-description__bottom-splitter"/>
             </div>
 
