--- a/static/style/style/colors.html
+++ b/static/style/style/colors.html
@@ -26,6 +26,7 @@
                 <div class="color-palette__line color-palette__line_color_yellow"><span>$color-yellow</span></div>
                 <p class="color-palette__bd">They can be used for notifications, action buttons, etc</p>
                 <h2 class="color-palette__sub-header">Supplementary color palette</h2>
+                <div class="color-palette__line color-palette__line_color_purple"><span>$color-purple</span></div>
                 <div class="color-palette__line color-palette__line_color_brown"><span>$color-brown</span></div>
                 <div class="color-palette__line color-palette__line_color_grey"><span>$color-grey</span></div>
                 <div class="color-palette__line color-palette__line_color_orange"><span>$color-orange</span></div>
@@ -44,6 +45,7 @@
                     <div class="color-palette__square color-palette__square_color_green"></div>
                     <div class="color-palette__square color-palette__square_color_blue"></div>
                     <div class="color-palette__square color-palette__square_color_yellow"></div>
+                    <div class="color-palette__square color-palette__square_color_purple"></div>
                     <div class="color-palette__square color-palette__square_color_brown"></div>
                     <div class="color-palette__square color-palette__square_color_grey"></div>
                     <div class="color-palette__square color-palette__square_color_orange"></div>
@@ -58,6 +60,7 @@
                     <div class="color-palette__square color-palette__square_color_green"></div>
                     <div class="color-palette__square color-palette__square_color_blue"></div>
                     <div class="color-palette__square color-palette__square_color_yellow"></div>
+                    <div class="color-palette__square color-palette__square_color_purple"></div>
                     <div class="color-palette__square color-palette__square_color_brown"></div>
                     <div class="color-palette__square color-palette__square_color_grey"></div>
                     <div class="color-palette__square color-palette__square_color_orange"></div>
@@ -72,6 +75,7 @@
                     <div class="color-palette__square color-palette__square_color_green"></div>
                     <div class="color-palette__square color-palette__square_color_blue"></div>
                     <div class="color-palette__square color-palette__square_color_yellow"></div>
+                    <div class="color-palette__square color-palette__square_color_purple"></div>
                     <div class="color-palette__square color-palette__square_color_brown"></div>
                     <div class="color-palette__square color-palette__square_color_grey"></div>
                     <div class="color-palette__square color-palette__square_color_orange"></div>
@@ -87,6 +91,7 @@
                     <div class="color-palette__square color-palette__square_color_green"></div>
                     <div class="color-palette__square color-palette__square_color_blue"></div>
                     <div class="color-palette__square color-palette__square_color_yellow"></div>
+                    <div class="color-palette__square color-palette__square_color_purple"></div>
                     <div class="color-palette__square color-palette__square_color_brown"></div>
                     <div class="color-palette__square color-palette__square_color_grey"></div>
                     <div class="color-palette__square color-palette__square_color_orange"></div>
@@ -101,6 +106,7 @@
                     <div class="color-palette__square color-palette__square_color_green"></div>
                     <div class="color-palette__square color-palette__square_color_blue"></div>
                     <div class="color-palette__square color-palette__square_color_yellow"></div>
+                    <div class="color-palette__square color-palette__square_color_purple"></div>
                     <div class="color-palette__square color-palette__square_color_brown"></div>
                     <div class="color-palette__square color-palette__square_color_grey"></div>
                     <div class="color-palette__square color-palette__square_color_orange"></div>
@@ -115,6 +121,7 @@
                     <div class="color-palette__square color-palette__square_color_green"></div>
                     <div class="color-palette__square color-palette__square_color_blue"></div>
                     <div class="color-palette__square color-palette__square_color_yellow"></div>
+                    <div class="color-palette__square color-palette__square_color_purple"></div>
                     <div class="color-palette__square color-palette__square_color_brown"></div>
                     <div class="color-palette__square color-palette__square_color_grey"></div>
                     <div class="color-palette__square color-palette__square_color_orange"></div>
@@ -129,6 +136,7 @@
                     <div class="color-palette__square color-palette__square_color_green"></div>
                     <div class="color-palette__square color-palette__square_color_blue"></div>
                     <div class="color-palette__square color-palette__square_color_yellow"></div>
+                    <div class="color-palette__square color-palette__square_color_purple"></div>
                     <div class="color-palette__square color-palette__square_color_brown"></div>
                     <div class="color-palette__square color-palette__square_color_grey"></div>
                     <div class="color-palette__square color-palette__square_color_orange"></div>
@@ -136,6 +144,21 @@
                     <div class="color-palette__square color-palette__square_color_white"></div>
                 </div> 
                 <h2 class="color-palette__sub-header">Supplementary color palette as bg</h2>
+                <div class="color-palette__line color-palette__line_width_double color-palette__line_color_purple">
+                    <div class="color-palette__square color-palette__square_color_pistachio"></div>
+                    <div class="color-palette__square color-palette__square_color_turquoise"></div>
+                    <div class="color-palette__square color-palette__square_color_wall"></div>
+                    <div class="color-palette__square color-palette__square_color_red"></div>
+                    <div class="color-palette__square color-palette__square_color_green"></div>
+                    <div class="color-palette__square color-palette__square_color_blue"></div>
+                    <div class="color-palette__square color-palette__square_color_yellow"></div>
+                    <div class="color-palette__square color-palette__square_color_purple"></div>
+                    <div class="color-palette__square color-palette__square_color_brown"></div>
+                    <div class="color-palette__square color-palette__square_color_grey"></div>
+                    <div class="color-palette__square color-palette__square_color_orange"></div>
+                    <div class="color-palette__square color-palette__square_color_black"></div>
+                    <div class="color-palette__square color-palette__square_color_white"></div>
+                </div>
                 <div class="color-palette__line color-palette__line_width_double color-palette__line_color_brown">
                     <div class="color-palette__square color-palette__square_color_pistachio"></div>
                     <div class="color-palette__square color-palette__square_color_turquoise"></div>
@@ -144,6 +167,7 @@
                     <div class="color-palette__square color-palette__square_color_green"></div>
                     <div class="color-palette__square color-palette__square_color_blue"></div>
                     <div class="color-palette__square color-palette__square_color_yellow"></div>
+                    <div class="color-palette__square color-palette__square_color_purple"></div>
                     <div class="color-palette__square color-palette__square_color_brown"></div>
                     <div class="color-palette__square color-palette__square_color_grey"></div>
                     <div class="color-palette__square color-palette__square_color_orange"></div>
@@ -158,6 +182,7 @@
                     <div class="color-palette__square color-palette__square_color_green"></div>
                     <div class="color-palette__square color-palette__square_color_blue"></div>
                     <div class="color-palette__square color-palette__square_color_yellow"></div>
+                    <div class="color-palette__square color-palette__square_color_purple"></div>
                     <div class="color-palette__square color-palette__square_color_brown"></div>
                     <div class="color-palette__square color-palette__square_color_grey"></div>
                     <div class="color-palette__square color-palette__square_color_orange"></div>
@@ -172,6 +197,7 @@
                     <div class="color-palette__square color-palette__square_color_green"></div>
                     <div class="color-palette__square color-palette__square_color_blue"></div>
                     <div class="color-palette__square color-palette__square_color_yellow"></div>
+                    <div class="color-palette__square color-palette__square_color_purple"></div>
                     <div class="color-palette__square color-palette__square_color_brown"></div>
                     <div class="color-palette__square color-palette__square_color_grey"></div>
                     <div class="color-palette__square color-palette__square_color_orange"></div>
@@ -187,6 +213,7 @@
                     <div class="color-palette__square color-palette__square_color_green"></div>
                     <div class="color-palette__square color-palette__square_color_blue"></div>
                     <div class="color-palette__square color-palette__square_color_yellow"></div>
+                    <div class="color-palette__square color-palette__square_color_purple"></div>
                     <div class="color-palette__square color-palette__square_color_brown"></div>
                     <div class="color-palette__square color-palette__square_color_grey"></div>
                     <div class="color-palette__square color-palette__square_color_orange"></div>
@@ -201,6 +228,7 @@
                     <div class="color-palette__square color-palette__square_color_green"></div>
                     <div class="color-palette__square color-palette__square_color_blue"></div>
                     <div class="color-palette__square color-palette__square_color_yellow"></div>
+                    <div class="color-palette__square color-palette__square_color_purple"></div>
                     <div class="color-palette__square color-palette__square_color_brown"></div>
                     <div class="color-palette__square color-palette__square_color_grey"></div>
                     <div class="color-palette__square color-palette__square_color_orange"></div>
@@ -231,6 +259,9 @@
                     <span class="color-palette__text color-palette__text_color_yellow">
                         $color-yellow
                     </span>    
+                    <span class="color-palette__text color-palette__text_color_purple">
+                        $color-purple
+                    </span>
                     <span class="color-palette__text color-palette__text_color_brown">
                         $color-brown
                     </span>
@@ -268,7 +299,10 @@
                     </span>
                     <span class="color-palette__text color-palette__text_color_yellow">
                         $color-yellow
-                    </span>    
+                    </span>
+                    <span class="color-palette__text color-palette__text_color_purple">
+                        $color-purple
+                    </span>
                     <span class="color-palette__text color-palette__text_color_brown">
                         $color-brown
                     </span>
@@ -307,6 +341,9 @@
                     <span class="color-palette__text color-palette__text_color_yellow">
                         $color-yellow
                     </span>    
+                    <span class="color-palette__text color-palette__text_color_purple">
+                        $color-purple
+                    </span>
                     <span class="color-palette__text color-palette__text_color_brown">
                         $color-brown
                     </span>
@@ -346,6 +383,9 @@
                     <span class="color-palette__text color-palette__text_color_yellow">
                         $color-yellow
                     </span>    
+                    <span class="color-palette__text color-palette__text_color_purple">
+                        $color-purple
+                    </span>
                     <span class="color-palette__text color-palette__text_color_brown">
                         $color-brown
                     </span>
@@ -384,6 +424,9 @@
                     <span class="color-palette__text color-palette__text_color_yellow">
                         $color-yellow
                     </span>    
+                    <span class="color-palette__text color-palette__text_color_purple">
+                        $color-purple
+                    </span>
                     <span class="color-palette__text color-palette__text_color_brown">
                         $color-brown
                     </span>
@@ -422,6 +465,9 @@
                     <span class="color-palette__text color-palette__text_color_yellow">
                         $color-yellow
                     </span>    
+                    <span class="color-palette__text color-palette__text_color_purple">
+                        $color-purple
+                    </span>
                     <span class="color-palette__text color-palette__text_color_brown">
                         $color-brown
                     </span>
@@ -460,6 +506,9 @@
                     <span class="color-palette__text color-palette__text_color_yellow">
                         $color-yellow
                     </span>    
+                    <span class="color-palette__text color-palette__text_color_purple">
+                        $color-purple
+                    </span>
                     <span class="color-palette__text color-palette__text_color_brown">
                         $color-brown
                     </span>
@@ -477,6 +526,47 @@
                     </span> 
                 </div>
                 <h2 class="color-palette__sub-header">Supplementary color palette as bg</h2>
+                <div class="color-palette__line color-palette__line_color_purple">
+                    <span class="color-palette__text color-palette__text_color_pistachio">
+                        $color-pistachio
+                    </span>
+                    <span class="color-palette__text color-palette__text_color_turquoise">
+                        $color-turquoise
+                    </span>
+                    <span class="color-palette__text color-palette__text_color_wall">
+                        $color-wall
+                    </span>
+                    <span class="color-palette__text color-palette__text_color_red">
+                        $color-red
+                    </span>
+                    <span class="color-palette__text color-palette__text_color_green">
+                        $color-green
+                    </span>
+                    <span class="color-palette__text color-palette__text_color_blue">
+                        $color-blue
+                    </span>
+                    <span class="color-palette__text color-palette__text_color_yellow">
+                        $color-yellow
+                    </span>    
+                    <span class="color-palette__text color-palette__text_color_purple">
+                        $color-purple
+                    </span>
+                    <span class="color-palette__text color-palette__text_color_brown">
+                        $color-brown
+                    </span>
+                    <span class="color-palette__text color-palette__text_color_grey">
+                        $color-grey
+                    </span>
+                    <span class="color-palette__text color-palette__text_color_orange">
+                        $color-orange
+                    </span> 
+                    <span class="color-palette__text color-palette__text_color_black">
+                        $color-black
+                    </span>
+                    <span class="color-palette__text color-palette__text_color_white">
+                        $color-white
+                    </span> 
+                </div>
                 <div class="color-palette__line color-palette__line_color_brown">
                     <span class="color-palette__text color-palette__text_color_pistachio">
                         $color-pistachio
@@ -499,6 +589,9 @@
                     <span class="color-palette__text color-palette__text_color_yellow">
                         $color-yellow
                     </span>    
+                    <span class="color-palette__text color-palette__text_color_purple">
+                        $color-purple
+                    </span>
                     <span class="color-palette__text color-palette__text_color_brown">
                         $color-brown
                     </span>
@@ -536,7 +629,10 @@
                     </span>
                     <span class="color-palette__text color-palette__text_color_yellow">
                         $color-yellow
-                    </span>    
+                    </span>  
+                    <span class="color-palette__text color-palette__text_color_purple">
+                        $color-purple
+                    </span>
                     <span class="color-palette__text color-palette__text_color_brown">
                         $color-brown
                     </span>
@@ -575,6 +671,9 @@
                     <span class="color-palette__text color-palette__text_color_yellow">
                         $color-yellow
                     </span>    
+                    <span class="color-palette__text color-palette__text_color_purple">
+                        $color-purple
+                    </span>
                     <span class="color-palette__text color-palette__text_color_brown">
                         $color-brown
                     </span>
@@ -614,6 +713,9 @@
                     <span class="color-palette__text color-palette__text_color_yellow">
                         $color-yellow
                     </span>    
+                    <span class="color-palette__text color-palette__text_color_purple">
+                        $color-purple
+                    </span>
                     <span class="color-palette__text color-palette__text_color_brown">
                         $color-brown
                     </span>
@@ -652,6 +754,9 @@
                     <span class="color-palette__text color-palette__text_color_yellow">
                         $color-yellow
                     </span>    
+                    <span class="color-palette__text color-palette__text_color_purple">
+                        $color-purple
+                    </span>
                     <span class="color-palette__text color-palette__text_color_brown">
                         $color-brown
                     </span>
