--- a/static/style/style/styles.html
+++ b/static/style/style/styles.html
@@ -29,9 +29,8 @@
             <div class="component-description">
                 <h2 class="component-description__header"><span class="component-description__block-name">language-menu</span> component</h2>
                 <div class="component-description__bd">
-                    <a class="component-description__link" href="#" ng-click="popupVisible = !popupVisible">Select language</a>
-                    <div class="language-menu" ng-class="{'language-menu_visible': popupVisible}">
-                        <div class="language-menu__close-button" ng-click="popupVisible = !popupVisible"><i class="language-menu__close-button-icon"></i></div>
+                    <div class="language-menu">
+                        <div class="language-menu__close-button"><i class="language-menu__close-button-icon"></i></div>
                         <ul class="language-menu__list">
                             <li class="language-menu__item"><span class="language-menu__item-text language-menu__item-text_selected">English - English</span></li>
                             <li class="language-menu__item"><span class="language-menu__item-text">Russian - Русский</span></li>
@@ -42,7 +41,6 @@
                             <li class="language-menu__item"><span class="language-menu__item-text">Deutsch - Deutsch</span></li>
                             <li class="language-menu__item"><span class="language-menu__item-text">Turkish - Türkçe</span></li>
                         </ul>
-                        <div class="language-menu__list-terminator"></div>
                     </div>
                 </div>
 
