--- a/static/style/style/styles.html
+++ b/static/style/style/styles.html
@@ -47,6 +47,52 @@
                 <hr class="component-description__bottom-splitter"/>
             </div>
 
+
+            <div class="component-description">
+                <h2 class="component-description__header"><span class="component-description__block-name">button-provider</span> component</h2>
+                <div class="component-description__bd">
+                    <a class="button-provider button-provider_facebook">
+                        <i class="button-provider__icon button-provider__icon_facebook"></i>
+                        <span class="button-provider__text">Facebook</span>
+                    </a>
+                    <a class="button-provider button-provider_google">
+                        <i class="button-provider__icon button-provider__icon_google"></i>
+                        <span class="button-provider__text">Google</span>
+                    </a>
+                </div>
+
+                <hr class="component-description__bottom-splitter"/>
+            </div>
+
+            <div class="component-description">
+                <h2 class="component-description__header"><span class="component-description__block-name">login</span> component</h2>
+                <div class="component-description__bd">
+                    <div class="login">
+
+                        <div class="login__container">
+                            <h1 class="login__header">Log in to Stitch Galaxy with</h1>
+                            <a class="login__button-provider button-provider button-provider_facebook">
+                                <i class="button-provider__icon button-provider__icon_facebook"></i>
+                                <span class="button-provider__text">Facebook</span>
+                            </a>
+
+                            <a class="login__button-provider button-provider button-provider_google">
+                                <i class="button-provider__icon button-provider__icon_google"></i>
+                                <span class="button-provider__text">Google</span>
+                            </a>
+                            <span class="login__post">We'll never post without your permission.</span>
+                            <div class="login__horizontal-separator">
+                                <span class="login__horizontal-separator-text">or</span>
+                            </div>
+                            <h1 class="login__header">Log in to your Stitch Galaxy account</h1>
+                        </div>
+                    </div>
+                </div>
+
+                <hr class="component-description__bottom-splitter"/>
+            </div>
+
+
             <div class="style-foundation">
                 <h1 class="style-foundation__header">Foundation</h1>
                 <div class="style-foundation__bd">
