--- a/static/style/style/styles.html
+++ b/static/style/style/styles.html
@@ -85,6 +85,8 @@
                                 <span class="login__horizontal-separator-text">or</span>
                             </div>
                             <h1 class="login__header">Log in to your Stitch Galaxy account</h1>
+                            <input class="login__input" placeholder="Email"/>
+                            <input class="login__input" placeholder="Password" type="password"/>
                         </div>
                     </div>
                 </div>
