--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
 
     </head>
     <body class="site__body">
-        <div class="site__content" ng-view="login.html">
+        <div class="site__content" ui-view>
         </div>
 
         <script src="/assets/js/vendor.min.js"></script>
