--- a/static/index.html
+++ b/static/index.html
@@ -10,12 +10,10 @@
         <link rel="stylesheet" href="/assets/css/site.min.css">
 
     </head>
-    <body class="site__body">
-        <div class="site__content" ui-view>
-        </div>
+    <body class="site__container">
+    <div ui-view class="site__container"></div>
+    <script src="/assets/js/vendor.min.js"></script>
+    <script src="/assets/js/site.min.js"></script>
 
-        <script src="/assets/js/vendor.min.js"></script>
-        <script src="/assets/js/site.min.js"></script>
-
-    </body>
+</body>
 </html>
