--- a/webapp/index.html
+++ b/webapp/index.html
@@ -2,15 +2,17 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Hello React!</title>
+        <title>Stitch galaxy</title>
     </head>
     <body>
-        <div id="example"></div>
-
+        <div id="root"></div>
         <!-- Dependencies -->
         <script src="./node_modules/react/dist/react.js"></script>
         <script src="./node_modules/react-dom/dist/react-dom.js"></script>
-
+        <script src="./node_modules/redux/dist/redux.js"></script>
+        <script src="./node_modules/react-router/umd/ReactRouter.js"></script>
+        <script src="./node_modules/react-intl/dist/react-intl.js"></script>
+        <script src="./node_modules/react-intl/locale-data/ru.js"></script>
         <!-- Main -->
         <script src="./dist/bundle.js"></script>
     </body>
