--- a/webapp/index.html
+++ b/webapp/index.html
@@ -10,6 +10,7 @@
         <script src="./node_modules/react/dist/react.js"></script>
         <script src="./node_modules/react-dom/dist/react-dom.js"></script>
         <script src="./node_modules/redux/dist/redux.js"></script>
+        <script src="./node_modules/react-redux/dist/react-redux.js"></script>
         <script src="./node_modules/react-router/umd/ReactRouter.js"></script>
         <script src="./node_modules/react-intl/dist/react-intl.js"></script>
         <script src="./node_modules/react-intl/locale-data/ru.js"></script>
