--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -2,17 +2,14 @@
 <html>
 
 <head>
-    <meta charset="UTF-8" />
     <title>Stitch galaxy</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
     <div id="root"></div>
-    <!-- Dependencies -->
-    <!--Vendor scripts-->
     <script src="./vendor.js"></script>
-    <!-- Main -->
-    <script src="./bundle.js"></script>
 </body>
 
 </html>
