--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id="root"></div>
-    <script src="./vendor.js"></script>
+    <!--<script src="./vendor.js"></script>-->
 </body>
 
 </html>
